--- a/style.css
+++ b/style.css
@@ -41,3 +41,21 @@ body {
 #ship-list li:hover {
   background-color: #444;
 }
+.grid {
+  border-collapse: collapse;
+  width: 100%;
+  height: 100%;
+}
+
+.cell {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #555;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 24px;
+}
+
+.cell.ship {
+  background-color: rgba(255,255,255,0.1);
+}
